Fix the wrong position of ULS icon for languages like hi, bo
Add an explicit line height for the element of ULS, login link etc

--- a/resources/css/ext.translate.mainpage.css
+++ b/resources/css/ext.translate.mainpage.css
@@ -23,6 +23,7 @@ body {
 .twn-mainpage-header .twn-mainpage-personal-actions {
 	padding-right: 20px;
 	text-align: right;
+	line-height: 1em;
 }
 
 .twn-mainpage-header .uls-trigger {
